WEB-2209 - set border-collapse: collapse to avoid whitespace in IE.

--- a/fid-web/src/main/webapp/style/fieldid.css
+++ b/fid-web/src/main/webapp/style/fieldid.css
@@ -272,7 +272,7 @@ h2 a {
 .list {
 	width: 100%;
 	margin: 5px 0px;
-	border-collapse: separate;
+	border-collapse: collapse;
 	border-bottom: 1px solid #CACACA;
 	emtpty-cells: show;
 }
@@ -1771,9 +1771,7 @@ input.description {
 }
 
 .dropDownLink img {
-	position: relative;
-	top: -4px;
-	right: -2px;
+	padding: 4px 2x 2px 0px;
 }
 
 #reducedLineHeightLabel{
